--- a/Chrome_Extension/sidepanel.html
+++ b/Chrome_Extension/sidepanel.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Fin￦i$E</title>
+    <script src="lib/d3.v7.min.js"></script>
     <style>
         body {
             margin: 0;
@@ -95,6 +96,42 @@
             font-size: 0.7rem;
             color: #6c757d;
         }
+        #graph-container {
+            width: 100%;
+            height: 400px;
+            border: 1px solid #dee2e6;
+            border-radius: 6px;
+        }
+        #graph-container svg {
+            width: 100%;
+            height: 100%;
+        }
+        .recommendation-section {
+            margin-top: 20px;
+            padding: 0 15px 15px 15px;
+            border: 1px solid #dee2e6;
+            border-radius: 6px;
+        }
+        .recommendation-item {
+            margin-bottom: 15px;
+            padding: 10px;
+            background-color: #f8f9fa;
+            border-radius: 6px;
+        }
+        .recommendation-item h4 {
+            margin: 0 0 10px 0;
+        }
+        .article-list {
+            margin: 0;
+            padding-left: 20px;
+        }
+        .article-item {
+            margin-bottom: 8px;
+        }
+        .similarity {
+            color: #6c757d;
+            font-size: 0.9em;
+        }
     </style>
 </head>
 <body>
@@ -112,6 +149,7 @@
         <h4>KU INISW Academy 5th Cohort</h4>
         <h4>권수현, 김금환, 박서현, 이준혁, 조창희, 차시현</h4>
     </footer>
+    <script src="hypergraph_visualization.js"></script>
     <script src="sidepanel.js"></script>
 </body>
 </html>
