--- a/d3js/NetworkGraph2.html
+++ b/d3js/NetworkGraph2.html
@@ -37,7 +37,7 @@
             if (!script1Executed) {
                 clearGraph();
                 const script = document.createElement('script');
-                script.src = 'script3d.js';
+                script.src = 'article-graph.js';
                 script.onload = () => {
                     script1Executed = true;
                     script2Executed = false;
